Try to fix dropdown alignment

--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -226,7 +226,7 @@ input[type="button"].button-primary:focus {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .arabic {
-  text-align-last: right;
+  text-align: right;
   direction: rtl;
 }
 
